--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ]
   },
   "scripts": {
-    "build": "yarn build:packages",
+    "build": "yarn build:all",
     "build:all": "yarn build:tokens && yarn build:icons && yarn build:components && yarn build:packages",
     "build:components": "babel-node -x .ts ./.scripts/build-components",
     "build:packages": "babel-node -x .ts ./.scripts/build-packages",
@@ -29,8 +29,8 @@
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check && yarn bump:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:check && yarn bump:next && npm run build:all && yarn publish:npm:next",
-    "publish:stable": "npm run build:all && yarn bump:stable && yarn publish:npm:stable",
+    "publish:next": "yarn bump:check && yarn bump:next && npm run build && yarn publish:npm:next",
+    "publish:stable": "npm run build && yarn bump:stable && yarn publish:npm:stable",
     "publish:npm:next": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public --tag next",
     "publish:npm:stable": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .turbo && git clean -fdX",
