--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check && yarn bump:check",
     "prepare-husky": "husky install",
     "publish:next": "yarn bump:check && yarn bump:next && npm run build && yarn publish:npm:next",
-    "publish:stable": "npm run build && yarn bump:stable && yarn publish:npm:stable",
+    "publish:stable": "yarn bump:stable && yarn publish:npm:stable",
     "publish:npm:next": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public --tag next",
     "publish:npm:stable": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .turbo && git clean -fdX",
