--- a/packages/react/src/atomic/MultiSelect/package.json
+++ b/packages/react/src/atomic/MultiSelect/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
-    "@nimbus-ds/skeleton": "workspace:^"
+    "@nimbus-ds/skeleton": "workspace:^",
+    "@nimbus-ds/text": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
