fix: unify cache with control

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -25,22 +25,15 @@ jobs:
         uses: actions/cache@v3
         id: yarn-cache
         with:
-          path: ~/.cache/yarn
+          path: |
+            ~/.cache/yarn
+            node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Cache node_modules folders
-        uses: actions/cache@v3
-        id: cache-node-modules
-        with:
-          path: |
-            **/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Check
