--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -5,33 +5,17 @@ on:
     branches:
       - master
 jobs:
+  setup:
+    uses: ./.github/workflows/setup-node-and-deps.yml
+
   sonarcloud:
     name: Analyze SonarCloud
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Set Node version
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: ".nvmrc"
-
-      - name: Cache yarn & dependencies
-        uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: |
-            ~/.cache/yarn
-            node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn
 
       - name: Run build tokens
         run: yarn build:tokens
