--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -5,17 +5,15 @@ on:
     branches:
       - master
 jobs:
-  setup:
-    uses: ./.github/workflows/setup-node-and-deps.yml
-
   sonarcloud:
     name: Analyze SonarCloud
     runs-on: ubuntu-latest
-    needs: setup
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - uses: ./.github/actions/setup-node-deps
 
       - name: Run build tokens
         run: yarn build:tokens
