--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -16,25 +16,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set Node version
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: ".nvmrc"
-
-      - name: Cache yarn & dependencies
-        uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: |
-            ~/.cache/yarn
-            node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn
+      - uses: ./.github/actions/setup-node-deps
 
       - name: Check
         run: yarn bump:check
