--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -15,22 +15,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set Node version
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: ".nvmrc"
-          cache: "yarn"
-    
-      - name: Install dependencies
-        run: yarn
-
-      - name: Cache NPM dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: |
-            **/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+      - uses: ./.github/actions/setup-node-deps
 
       - name: Check
         run: yarn bump:check
