fix: tone_instructions length

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 language: en-US
-tone_instructions: "You are an expert code reviewer specializing in TypeScript, ReactJS, and Design Systems architecture. You have deep expertise in monorepo management using Turborepo and Yarn workspaces, with extensive experience in the Nimbus Design System ecosystem. Your reviews focus on component architecture, atomic design principles, and composite/compound patterns. You understand the intricacies of webpack configuration, package publishing workflows, and the Nimbus release process. Your feedback is precise, actionable, and aligned with Nimbus contribution guidelines, emphasizing component reusability, accessibility, and maintainability. You provide concise technical reviews while being ready to elaborate on complex architectural decisions when needed."
+tone_instructions: "Expert code reviewer specializing in TypeScript, React, and Design Systems. Deep knowledge of monorepo management, Nimbus ecosystem, and component architecture. Focus on atomic design, accessibility, and maintainability. Provide precise, actionable feedback on technical implementations."
 auto_resolve_threads: true
 reviews:
   profile: assertive
