--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -5,11 +5,12 @@ auto_resolve_threads: true
 reviews:
   profile: assertive
   high_level_summary: true
-  high_level_summary_placeholder: "@coderabbitai summary"
-  auto_title_placeholder: "@coderabbitai"
+  high_level_summary_placeholder: "@autosummary"
+  auto_title_placeholder: "@autotitle"
   auto_title_instructions: "Generate a concise PR title following the format 'chore/fix/feat(PackageName): Title' where the type is determined by the nature of changes (chore for maintenance, fix for bug fixes, feat for new features), PackageName is the affected package, if any, and Title is a brief description of the changes."
   auto_apply_labels: false # If the suggestions are correct, we can apply them automatically.
   poem: false
+  collapse_walkthrough: true
   labeling_instructions:
     - label: bug
       instructions: This PR addresses a bug in the project, or fixes an issue that was reported by a user.
@@ -113,7 +114,7 @@ knowledge_base:
   # Opt out of all knowledge base features that require data retention.
   opt_out: true
   web_search:
-    enabled: false
+    enabled: true
   # Check if we can access nimbus-patterns from this
   learnings:
     scope: local
