--- a/.github/workflows/preview-storybook.yml
+++ b/.github/workflows/preview-storybook.yml
@@ -27,24 +27,23 @@ jobs:
             echo "should_skip=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Exit if no release files
-        if: steps.check_release.outputs.should_skip == 'true'
-        run: |
-          echo "Nothing to build. Exiting workflow."
-          exit 1
-
       - uses: ./.github/actions/setup-node-deps
+        if: steps.check_release.outputs.should_skip == 'false'
 
       - name: Run build tokens
+        if: steps.check_release.outputs.should_skip == 'false'
         run: npm run build:tokens
 
       - name: Run build icons
+        if: steps.check_release.outputs.should_skip == 'false'
         run: yarn build:icons
 
       - name: Build Storybook
+        if: steps.check_release.outputs.should_skip == 'false'
         run: yarn build:storybook
 
       - name: 🔐 Configure AWS credentials using OIDC
+        if: steps.check_release.outputs.should_skip == 'false'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
@@ -52,10 +51,12 @@ jobs:
           audience: sts.amazonaws.com    
                   
       - name: Upload Storybook to S3
+        if: steps.check_release.outputs.should_skip == 'false'
         run: |
           aws s3 sync ./.build-storybook s3://ns-ec-dms-bs3-nimbus-preview/components/pull/${{ github.event.pull_request.number }} --delete
 
       - name: Comment Storybook preview URL on PR
+        if: steps.check_release.outputs.should_skip == 'false'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
