--- a/.github/workflows/preview-storybook.yml
+++ b/.github/workflows/preview-storybook.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3    
+        uses: actions/checkout@v3
 
       - name: Check for release files in ./yarn/versions
         id: check_release
@@ -23,6 +23,8 @@ jobs:
           if [ "$has_releases" -eq "0" ]; then
             echo "No release files found, skipping..."
             echo "should_skip=true" >> $GITHUB_OUTPUT
+            echo "## ⚠️ Storybook preview not available" >> $GITHUB_STEP_SUMMARY
+            echo "Storybook preview is not available for this PR because there are no changes available for a new release." >> $GITHUB_STEP_SUMMARY
           else
             echo "should_skip=false" >> $GITHUB_OUTPUT
           fi
@@ -48,14 +50,14 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
           aws-region: us-east-1
-          audience: sts.amazonaws.com    
-                  
+          audience: sts.amazonaws.com
+
       - name: Upload Storybook to S3
         if: steps.check_release.outputs.should_skip == 'false'
         run: |
           aws s3 sync ./.build-storybook s3://ns-ec-dms-bs3-nimbus-preview/components/pull/${{ github.event.pull_request.number }} --delete
 
-      - name: Comment Storybook preview URL on PR
+      - name: Comment Storybook preview URL on PR and Check summary
         if: steps.check_release.outputs.should_skip == 'false'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -68,7 +70,6 @@ jobs:
           comments=$(curl -s -H "Authorization: token $GH_TOKEN" \
             https://api.github.com/repos/$REPO/issues/$PR_NUMBER/comments)
 
-          # Encontrar y eliminar el comentario existente si existe
           comment_id=$(echo "$comments" | jq -r '.[] | select(.body | test("View Storybook.*pull/'"$PR_NUMBER"'")) | .id')
           
           if [ ! -z "$comment_id" ]; then
@@ -80,6 +81,9 @@ jobs:
           curl -s -H "Authorization: token $GH_TOKEN" \
             -H "Content-Type: application/json" \
             -X POST -d "{
-              \"body\": \"🚀✨ Your Storybook preview is ready!\n\nTake a look at the visual changes introduced in this PR here:  \n🔗 <a href=\\\"$STORYBOOK_URL\\\" target=\\\"_blank\\\">View Storybook</a>\n\nHappy reviewing! 🎉\"
+              \"body\": \"🚀✨ Your Storybook preview is ready!\n\n🔗 [View Storybook]($STORYBOOK_URL)\n\nHappy reviewing! 🎉\"
             }" \
             https://api.github.com/repos/$REPO/issues/$PR_NUMBER/comments
+
+          echo "## 🚀 Storybook Preview Ready" >> $GITHUB_STEP_SUMMARY
+          echo "[👉 View Storybook Preview]($STORYBOOK_URL)" >> $GITHUB_STEP_SUMMARY
