--- a/.github/workflows/cleanup-storybook-preview.yml
+++ b/.github/workflows/cleanup-storybook-preview.yml
@@ -16,7 +16,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
-          aws-region: us-east-1
+          aws-region: us-west-2
           audience: sts.amazonaws.com 
 
       - name: Delete Storybook preview from S3
@@ -27,3 +27,4 @@ jobs:
 
           echo "Deleting S3 folder: s3://$BUCKET_NAME/$PREVIEW_PATH"
           aws s3 rm "s3://$BUCKET_NAME/$PREVIEW_PATH" --recursive
+`
