--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "@storybook/react-webpack5": "^7.6.4",
     "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^6.5.1",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@tiendanube/eslint-config": "^0.3.2",
     "@types/jest": "28.1.6",
     "@types/node": "^18.11.13",
