--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -165,6 +165,10 @@
       "import": "./dist/Pagination/index.js",
       "require": "./dist/Pagination/index.js"
     },
+    "./SegmentedControl": {
+      "import": "./dist/SegmentedControl/index.js",
+      "require": "./dist/SegmentedControl/index.js"
+    },
     "./Sidebar": {
       "import": "./dist/Sidebar/index.js",
       "require": "./dist/Sidebar/index.js"
