feat: cleaned up unnecessary classes and implemented Box

--- a/packages/react/src/composite/SegmentedControl/package.json
+++ b/packages/react/src/composite/SegmentedControl/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@nimbus-ds/skeleton": "workspace:^",
-    "@nimbus-ds/typings": "workspace:^"
+    "@nimbus-ds/typings": "workspace:^",
+    "@nimbus-ds/button": "workspace:^"
   },
   "peerDependencies": {
     "@nimbus-ds/styles": "workspace:^",
