feat: segmented control (#290)
* feat: initial development

* fix: tests

* feat: multiple selection at a time and added tests

* feat: cleaned up removing Item

* feat: improved css and added more stories

* fix: lint

* feat: fullwidth support and tests

* feat: build docs and yarn versions

* fix: types and lint

* fix: docs

* feat: support all htmlbutton props for segmented control item

* fix: lint

* fix: icons in changelog

* fix: exposed skeleton and button props

* feat: build and docs

* feat: cleaned up unnecessary classes and implemented Box

* fix: types and dependencies

* fix: story description

* fix: tests

* feat: generative stars icon (#291)

* feat: new icon

* fix: typos

* feat: publish release

* fix: thumbnail skeleton (#289)

* fix: support percentage and set default 100% same Thumbnail

* fix: add readme and declined version

* fix: add readme and storybook

* feat: include patch to components

* feat: add changelog

* Update CHANGELOG.md

* Update CHANGELOG.md

* Update CHANGELOG.md

* Update CHANGELOG.md

* feat: publish release

* chore: updated documentation for components and subcomponents

* fix: border radius

* fix: segmented control allow all unselected

* fix: lint

---------

Co-authored-by: joacotornello <joacotornello@users.noreply.github.com>
Co-authored-by: Harry Barzola <44773699+harrytiendanube@users.noreply.github.com>
Co-authored-by: harrytiendanube <harrytiendanube@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["packages", ".scripts", "index.d.ts"],
+  "include": ["packages", ".scripts", "index.d.ts", "jest.setup.tsx"],
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
@@ -86,7 +86,10 @@
       ],
       "@nimbus-ds/sidebar": ["./packages/react/src/composite/Sidebar/src"],
       "@nimbus-ds/tabs": ["./packages/react/src/composite/Tabs/src"],
-      "@nimbus-ds/table": ["./packages/react/src/composite/Table/src"]
+      "@nimbus-ds/table": ["./packages/react/src/composite/Table/src"],
+      "@nimbus-ds/segmented-control": [
+        "./packages/react/src/composite/SegmentedControl/src"
+      ]
     }
   }
 }
