--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Build icons
         run: yarn build:icons
       
+      - name: Build docs
+        run: yarn build:docs
+        
       - name: Build components
         run: |
           export NODE_OPTIONS="--max_old_space_size=12288"
