--- a/packages/core/scripts/package.json
+++ b/packages/core/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/scripts",
-  "version": "1.6.2",
+  "version": "1.7.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
