--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/components",
-  "version": "5.11.1-rc.2",
+  "version": "5.11.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
