--- a/packages/react/src/composite/Stepper/package.json
+++ b/packages/react/src/composite/Stepper/package.json
@@ -40,7 +40,7 @@
     "react-dom": "^16.8 || ^17.0 || ^18.0"
   },
   "devDependencies": {
-    "@nimbus-ds/webpack": "workspace:^",
-    "@nimbus-ds/button": "workspace:*"
+    "@nimbus-ds/button": "workspace:*",
+    "@nimbus-ds/webpack": "workspace:^"
   }
 }
