feat: generate documentation props bundle (#296)
* feat: build component props bundle and updated publish pipeline

* feat: build docs on PR

* feat: constants

* feat: changelogs

* fix: missing yarn in yarn build:all

* fix: jsdoc

* chore: yarn versions

* fix: correctly minify docs

* fix: untracked component-props.json and moved to build time

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build icons
         run: yarn build:icons
-      
+        
       - name: Build components
         run: |
           export NODE_OPTIONS="--max_old_space_size=12288"
@@ -53,6 +53,9 @@ jobs:
         run: |
           export NODE_OPTIONS="--max_old_space_size=12288"
           yarn build:packages
+
+      - name: Build docs
+        run: yarn build:docs
 
       - name: Publish packages
         run: yarn publish:stable
