--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "yarn build:all",
-    "build:all": "yarn build:tokens && yarn build:icons && yarn build:components && yarn build:packages",
+    "build:all": "yarn build:tokens && yarn build:icons && yarn build:components && yarn build:packages && yarn build:docs",
     "build:components": "babel-node -x .ts ./.scripts/build-components",
     "build:packages": "babel-node -x .ts ./.scripts/build-packages",
     "build:docs": "babel-node -x .ts ./.scripts/json-documentation",
