--- a/packages/react/src/composite/Stepper/package.json
+++ b/packages/react/src/composite/Stepper/package.json
@@ -34,7 +34,8 @@
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/styles": "workspace:^",
-    "@nimbus-ds/text": "workspace:^"
+    "@nimbus-ds/text": "workspace:^",
+    "@nimbus-ds/card": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
