--- a/packages/react/src/composite/Stepper/package.json
+++ b/packages/react/src/composite/Stepper/package.json
@@ -31,11 +31,11 @@
   },
   "dependencies": {
     "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/card": "workspace:^",
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/styles": "workspace:^",
-    "@nimbus-ds/text": "workspace:^",
-    "@nimbus-ds/card": "workspace:^"
+    "@nimbus-ds/text": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
