feat: render icon storie

--- a/packages/react/src/atomic/Icon/package.json
+++ b/packages/react/src/atomic/Icon/package.json
@@ -20,6 +20,12 @@
     "react": "^16.8 || ^17.0 || ^18.0",
     "react-dom": "^16.8 || ^17.0 || ^18.0"
   },
+  "devDependencies": {
+    "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/icons": "workspace:^",
+    "@nimbus-ds/tooltip": "workspace:^",
+    "@nimbus-ds/webpack": "workspace:^"
+  },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
     "type": "git",
@@ -27,9 +33,5 @@
   },
   "bugs": {
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
-  },
-  "devDependencies": {
-    "@nimbus-ds/icons": "workspace:^",
-    "@nimbus-ds/webpack": "workspace:^"
   }
 }
