feat: change prop to renderOverlay

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/components",
-  "version": "5.12.1",
+  "version": "5.13.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -189,5 +189,6 @@
       "import": "./dist/Tabs/index.js",
       "require": "./dist/Tabs/index.js"
     }
-  }
+  },
+  "stableVersion": "5.12.0"
 }
