--- a/packages/react/src/atomic/ProgressBar/package.json
+++ b/packages/react/src/atomic/ProgressBar/package.json
@@ -30,8 +30,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/box": "workspace:^",
     "@nimbus-ds/skeleton": "workspace:^",
-    "@nimbus-ds/webpack": "workspace:^",
-    "@nimbus-ds/box": "workspace:^"
+    "@nimbus-ds/webpack": "workspace:^"
   }
 }
