--- a/packages/react/src/composite/ScrollPane/package.json
+++ b/packages/react/src/composite/ScrollPane/package.json
@@ -32,18 +32,19 @@
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
-    "react-dom": "^16.8 || ^17.0 || ^18.0"
+    "react-dom": "^16.8 || ^17.0 || ^18.0",
+    "@nimbus-ds/styles": "workspace:^"
+
   },
   "dependencies": {
-    "@nimbus-ds/box": "workspace:^",
-    "@nimbus-ds/card": "workspace:^",
-    "@nimbus-ds/icon": "workspace:^",
-    "@nimbus-ds/icons": "workspace:^",
-    "@nimbus-ds/styles": "workspace:^",
-    "@nimbus-ds/text": "workspace:^"
+    "@nimbus-ds/box": "workspace:^"
   },
   "devDependencies": {
     "@nimbus-ds/button": "workspace:^",
-    "@nimbus-ds/webpack": "workspace:^"
+    "@nimbus-ds/webpack": "workspace:^",
+    "@nimbus-ds/text": "workspace:^",
+    "@nimbus-ds/card": "workspace:^",
+    "@nimbus-ds/icon": "workspace:^",
+    "@nimbus-ds/icons": "workspace:^"
   }
 }
