--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectName=nimbus-design-system
 sonar.sources=.scripts,packages
 sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx
 sonar.tests=packages/react/src
-sonar.test.inclusions=**/*.spec.tsx
+sonar.test.inclusions=**/*.spec.tsx,**/*.spec.ts
 sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**, packages/core/styles/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.qualitygate.wait=true
