fix: included styles in coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,6 @@ sonar.sources=.scripts,packages
 sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx,**/packages/core/tokens/**,**/assets/**,**/docs/**,**/.cursor/**
 sonar.tests=packages
 sonar.test.inclusions=**/*.spec.tsx,**/*.spec.ts
-sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**,packages/core/styles/**
+sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**,packages/core/styles/dist/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.qualitygate.wait=true
