--- a/packages/react/src/atomic/Icon/package.json
+++ b/packages/react/src/atomic/Icon/package.json
@@ -17,10 +17,10 @@
     "@nimbus-ds/skeleton": "workspace:^"
   },
   "peerDependencies": {
-    "react": "^16.8 || ^17.0 || ^18.0",
-    "react-dom": "^16.8 || ^17.0 || ^18.0",
     "@nimbus-ds/styles": "workspace:^",
-    "@nimbus-ds/typings": "workspace:^"
+    "@nimbus-ds/typings": "workspace:^",
+    "react": "^16.8 || ^17.0 || ^18.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0"
   },
   "devDependencies": {
     "@nimbus-ds/box": "workspace:^",
