feat: gradient building system and support for gradients in Icons (#321)
* feat: init gradient support

* feat: gradient support on button, chip and input atomic components

* feat: SVG gradient support

* fix: improved code reusability

* feat: improved gradient with token system and removed unnecessary gradients in chip and button

* feat: moved all svg logic into Icon package

* feat: moved all svg logic into Icon package

* feat: improved code structure and organization

* feat: improved code quality based on CodeRabbit suggestions

* fix: removed unnecesary reference to gradient in styles

* fix: lint

* fix: sonar tests

* Revert "fix: sonar tests"

This reverts commit cc258ab1a1db631f93dfb2f3a9e6d7d873473492.

* fix: sonar properties

* fix: sonar test inclusions

* feat: adds test to sonar workflow

* fix: lcov path

* fix: narrow property

* fix: improved types ,removed redundancy and removed string.match

* fix: exclusions

* fix: included styles in coverage

* fix: removed input from releases plan for this PR

* fix: removed old comment

* fix: build docs and install

* fix: pr references

* fix: versions

* fix: removed unnecessary icon

* fix: correctly exported constant to allow bundlers to keep them in client projects | removed old chip references

--- a/packages/react/src/atomic/Icon/package.json
+++ b/packages/react/src/atomic/Icon/package.json
@@ -17,6 +17,8 @@
     "@nimbus-ds/skeleton": "workspace:^"
   },
   "peerDependencies": {
+    "@nimbus-ds/styles": "workspace:^",
+    "@nimbus-ds/typings": "workspace:^",
     "react": "^16.8 || ^17.0 || ^18.0",
     "react-dom": "^16.8 || ^17.0 || ^18.0"
   },
